Archive2/f6/c060277028ee82/output
main.cpp:3:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:9:1: error: 'cout' was not declared in this scope
 cout<<"\n\n";
 ^
main.cpp:9:1: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
